force-app/main/default/objects/FEC_ChatHistory__c/FEC_ChatHistory__c.object-meta.xml
<CustomObject>
    <description>Archive each message.</description>
    <label>Chat History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>