force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_ChatChannel__c.field-meta.xml
<CustomField>
    <fullName>FEC_ChatChannel__c</fullName>
    <label>ChatChanel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>