force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>FEC_CreatedAt__c</fullName>
    <description>Thời gian tin nhắn được gửi.</description>
    <label>CreatedAt</label>
    <type>DateTime</type>
</CustomField>