force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field kiểm tra xem phải do user tự input hay không</description>
    <label>isManual</label>
    <type>Checkbox</type>
</CustomField>