force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_IsAgent__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAgent</label>
    <type>Checkbox</type>
</CustomField>