force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_Message__c.field-meta.xml
<CustomField>
    <fullName>FEC_Message__c</fullName>
    <description>Nội dung tin nhắn.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>