force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_MessageID__c.field-meta.xml
<CustomField>
    <fullName>FEC_MessageID__c</fullName>
    <description>Unique identifier of the chat message from ChatHub (UUID). Used as External ID for idempotent saves and to prevent duplicates when the same payload is submitted from multiple tabs/browsers.</description>
    <externalId>true</externalId>
    <label>MessageID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>