force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_MessageType__c.field-meta.xml
<CustomField>
    <fullName>FEC_MessageType__c</fullName>
    <description>Loại tin nhắn (text, attachment, image).</description>
    <label>MessageType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>attachment</fullName>
            </value>
            <value>
                <fullName>image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>