force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_SenderName__c.field-meta.xml
<CustomField>
    <fullName>FEC_SenderName__c</fullName>
    <description>Tên người gửi (Agent/Customer).</description>
    <label>SenderName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>