force-app/main/default/objects/FEC_ChatHistory__c/fields/FEC_SessionID__c.field-meta.xml
<CustomField>
    <fullName>FEC_SessionID__c</fullName>
    <description>Session ID (để truy vấn lịch sử).</description>
    <label>SessionID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>